--- a/templates/src/pages/[...slug].astro
+++ b/templates/src/pages/[...slug].astro
@@ -118,7 +118,7 @@ if (VERBOSE) {
   title={storyfragmentTitle}
   description={description}
   slug={lookup}
-  menuId={storyData.menuId || null}
+  menu={storyData.menu || null}
   created={storyData.created}
   isContext={false}
   isStoryKeep={false}
