better epinet wrapper

--- a/templates/custom/minimal/CodeHook.astro
+++ b/templates/custom/minimal/CodeHook.astro
@@ -6,10 +6,12 @@ import FeaturedContent from '@/components/codehooks/FeaturedContent.astro';
 import ListContent from '@/components/codehooks/ListContent.astro';
 import BunnyVideoWrapper from '@/components/codehooks/BunnyVideoWrapper.astro';
 import EpinetWrapper from '@/components/codehooks/EpinetWrapper';
+import type { FullContentMapItem } from 'templates/src/types/tractstack';
 // import CustomHero from './CustomHero.astro';  // Uncomment to add custom components
 
 export interface Props {
   target: string;
+  fullContentMap: FullContentMapItem[];
   options?: {
     params?: {
       options?: string;
@@ -17,10 +19,9 @@ export interface Props {
   };
 }
 
-const { target, options } = Astro.props;
+const { target, options, fullContentMap } = Astro.props;
 
 const goBackend = import.meta.env.PUBLIC_GO_BACKEND || 'http://localhost:8080';
-const contentMap = Astro.locals.fullContentMap || [];
 const dashboardData = await fetch(
   `${goBackend}/api/v1/analytics/dashboard?duration=weekly`
 ).then((r) => r.json());
@@ -39,15 +40,15 @@ export const components = {
   target === 'list-content' ? (
     <ListContent
       options={options}
-      contentMap={contentMap}
+      contentMap={fullContentMap}
       hotContent={hotContent}
     />
   ) : target === 'featured-content' ? (
-    <FeaturedContent options={options} contentMap={contentMap} />
+    <FeaturedContent options={options} contentMap={fullContentMap} />
   ) : target === 'bunny-video' ? (
     <BunnyVideoWrapper options={options} />
   ) : target === 'epinet' ? (
-    <EpinetWrapper fullContentMap={contentMap} client:only="react" /> /* 
+    <EpinetWrapper fullContentMap={fullContentMap} client:only="react" /> /* 
   : target === "custom-hero" ? (
     <CustomHero />
   ) */
